--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,14 @@ body {
 
 input[type="text"] {
   float: left;
+  width: 93%;
   padding: 6px;
   border: none;
   font-size: 17px;
 }
 
-input[type="text"]:focus-visible {
-  outline: 2px solid blue;
+.search-container {
+  flex: 1 1 auto;
 }
 
 .search-container button {
@@ -46,6 +47,10 @@ input[type="text"]:focus-visible {
 
 .search-container button:hover {
   background: #ccc;
+}
+
+input[type="text"]:focus-visible {
+  outline: 2px solid blue;
 }
 
 .icon {
